force-app/main/default/objects/Alert__c/Alert__c.object-meta.xml
<CustomObject>
    <label>Alerte</label>
    <nameField>
        <displayFormat>ALT-{0000}</displayFormat>
        <label>Numéro alerte</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alertes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>