force-app/main/default/objects/Alert__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Contrat concerné par l&apos;alerte, pour les alertes qui ne sont pas liées à une ligne de contrat précise (ex: fin de contrat).</description>
    <label>Contrat</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Alertes</relationshipLabel>
    <relationshipName>Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>