force-app/main/default/objects/Alert__c/fields/Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de contrat</label>
    <referenceTo>Contract_Line__c</referenceTo>
    <relationshipLabel>Alertes</relationshipLabel>
    <relationshipName>Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>