force-app/main/default/objects/Alert__c/fields/Date_Alerte__c.field-meta.xml
<CustomField>
    <fullName>Date_Alerte__c</fullName>
    <label>Date de l&apos;alerte</label>
    <type>DateTime</type>
</CustomField>