force-app/main/default/objects/Alert__c/fields/Seuil_Depasse__c.field-meta.xml
<CustomField>
    <fullName>Seuil_Depasse__c</fullName>
    <label>Seuil dépassé (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>