force-app/main/default/objects/Alert__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouvelle</fullName>
                <default>true</default>
                <label>Nouvelle</label>
            </value>
            <value>
                <fullName>Vue</fullName>
            </value>
            <value>
                <fullName>Résolue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>