force-app/main/default/objects/Alert__c/fields/Type_Alerte__c.field-meta.xml
<CustomField>
    <fullName>Type_Alerte__c</fullName>
    <label>Type d&apos;alerte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surfacturation</fullName>
            </value>
            <value>
                <fullName>Provision_Depassee</fullName>
                <label>Provision dépassée</label>
            </value>
            <value>
                <fullName>Consommation_Anormale</fullName>
                <label>Consommation anormale</label>
            </value>
            <value>
                <fullName>Preavis_Fin_Contrat</fullName>
                <label>Préavis fin de contrat (60j)</label>
            </value>
            <value>
                <fullName>Fin_Contrat_Imminente</fullName>
                <label>Fin de contrat imminente (30j)</label>
            </value>
            <value>
                <fullName>Norme_30j_Depassee</fullName>
                <label>Norme 30 jours dépassée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>