force-app/main/default/objects/Alert__c/listViews/Toutes_les_alertes.listView-meta.xml
<ListView>
    <fullName>Toutes_les_alertes</fullName>
    <columns>NAME</columns>
    <columns>Contract_Line__c</columns>
    <columns>Type_Alerte__c</columns>
    <columns>Statut__c</columns>
    <columns>Date_Alerte__c</columns>
    <columns>Seuil_Depasse__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les alertes</label>
    <language>fr</language>
</ListView>